--- a/Client/caso2/.classpath
+++ b/Client/caso2/.classpath
@@ -2,6 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/Server/libs/bcprov-jdk15on-155.jar"/>
+	<classpathentry kind="lib" path="JARS/GLoad 1.3.jar"/>
+	<classpathentry kind="lib" path="JARS/bcpg-jdk15on-155.jar"/>
+	<classpathentry kind="lib" path="JARS/bcpkix-jdk15on-155.jar"/>
+	<classpathentry kind="lib" path="JARS/bcprov-jdk15on-155.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
